maybe fix styles on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -37,6 +37,10 @@ tt, pre {
   height: 13rem;
 }
 
+article {
+  position: absolute;
+}
+
 h1 {
   font-weight: normal;
   margin-bottom: 0;
